[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mara_robosim"
version = "0.1.0"
description = "MARA RoboSim: A benchmark for embodied world model learning and causal discovery."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
   "matplotlib",
   "numpy",
   "pybullet",
   "gymnasium",
   "Pillow",
   "scipy",
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mara_robosim = ["py.typed", "assets/**/*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
py_version = 310
profile = "black"
multi_line_output = 3
skip_glob = ["venv/*", ".venv/*"]

[tool.docformatter]
line-length = 88
wrap-summaries = 88
wrap-descriptions = 88

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = ["venv/*", ".venv/*", "scripts/*"]

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "pybullet.*",
    "pybullet_utils.*",
    "gymnasium.*",
    "scipy.*",
    "gym.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "mara_robosim.envs.*",
    "mara_robosim.gymnasium_wrapper",
]
disable_error_code = ["arg-type", "return-value", "override", "union-attr", "assignment"]
